--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,6 @@
     </div>
   </div>
   
-  <script src="js/app.min.js"></script>
+  <script src="js/app.min.js" type="module"></script>
 </body>
 </html>
