--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Memory game</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"><link rel="stylesheet" href="css/style.min.css"></head><body><div class="game"><div class="game__board"></div><div class="game__setting"><p class="game__setting-text">Your score: <span class="game__score">0</span></p><p class="game__setting-text">Cards quantity: <span class="game__difficult"></span></p><input class="game__difficult-range" type="range" min="8" max="32" step="1"> <button class="button game__start-button" type="button">New Game</button></div></div><script src="js/app.min.js" type="module"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Memory game</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"><link rel="stylesheet" href="css/style.min.css"></head><body><div class="game"><div class="game__setting"><p class="game__setting-text">Your score: <span class="game__score">0</span></p><p class="game__setting-text">Cards quantity: <span class="game__difficult"></span></p><input class="game__difficult-range" type="range" min="4" max="32" step="1" value="8"><p class="game__setting-text game__setting-text--hide">Board size: <span class="game__board-width"></span>px</p><input class="game__resize-range" type="range" min="145"><button class="button game__start-button" type="button">New Game</button></div><div class="game__board"></div></div><script src="js/app.min.js" type="module"></script><script>const gameBoard = document.querySelector('.game__board');
+    const gameWidthRange = document.querySelector('.game__resize-range');
+    const boardWidthView = document.querySelector('.game__board-width');
+
+    // init size stats
+    gameWidthRange.max = gameBoard.offsetWidth;
+    gameWidthRange.value = gameBoard.offsetWidth;
+    boardWidthView.textContent = gameWidthRange.value;
+
+    // input handler
+    gameWidthRange.addEventListener('input', () => {
+      boardWidthView.textContent = gameWidthRange.value;
+      gameBoard.setAttribute('style', `width: ${gameWidthRange.value}px`);
+    });
+
+    // page resize handler
+    window.addEventListener('resize', () => {
+      gameBoard.removeAttribute('style');
+
+      if (window.innerWidth > 660) {
+        gameWidthRange.max = gameBoard.offsetWidth;
+        gameWidthRange.value = gameBoard.offsetWidth;
+        boardWidthView.textContent = gameWidthRange.value;
+      }
+    });</script></body></html>
